refactor: introduce /governors endpoint
